# superuser

./: .gitignore  LICENSE  README.MD  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/nlifew/superuser/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/nlifew/superuser/broadcast/: ResultReceiver.java
app/src/main/java/cn/nlifew/superuser/ui/: MainActivity.java  RequestActivity.java
app/src/main/jni/: CMakeLists.txt  java_request.c  log.h  socket.c  socket.h  su.c  su.h  su_daemon.c  su_exec.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/cn/nlifew/superuser/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
su/: build.gradle
su/src/main/: AndroidManifest.xml
su/src/main/jni/: Android.mk  Application.mk  activity.h  client.h  daemon.h  su.c  su.h
su/src/main/jni/utils/: log.h  types.h
su/src/main/libs/arm64-v8a/: su
su/src/main/res/values/: strings.xml
